--- a/CMain.ui
+++ b/CMain.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>645</width>
-    <height>348</height>
+    <width>640</width>
+    <height>372</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -71,7 +71,7 @@
         <x>0</x>
         <y>0</y>
         <width>1448</width>
-        <height>226</height>
+        <height>250</height>
        </rect>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout">
@@ -95,7 +95,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="butSPARATS">
+        <widget class="QPushButton" name="butSPARTS">
          <property name="minimumSize">
           <size>
            <width>200</width>
